--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    image: sainawhein/kode-war-frontend:latest
     ports:
       - "3000:3000"
     volumes:
@@ -19,6 +20,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    image: sainawhein/kode-war-backend:latest
     ports:
       - "8000:8000"
     volumes:
@@ -36,6 +38,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    image: sainawhein/kode-war-backend:latest
     command: celery -A config worker -l INFO -E
     volumes:
       - ./backend:/app
@@ -52,6 +55,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    image: sainawhein/kode-war-backend:latest
     command: celery -A config flower --port=5555
     ports:
       - "5555:5555"
