--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,17 @@
   },
   "dependencies": {
     "@pyodide/pyodide": "0.17.1",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@tanstack/react-query": "^5.77.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "monaco-editor": "0.52.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "2.5.2"
+    "react-hot-toast": "2.5.2",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.0.0",
